--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-node_modules
-.env
-.DS_Store
-prisma/migrations
-package-lock.json
+*/node_modules
+*/prisma/migrations
+
+*/build
+*/.env
+proxyServer/.env
