--- a/api-server/package.json
+++ b/api-server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.19.2",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "node-ipinfo": "^3.5.3",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
