Add features section in landing page, added feature to update the source dir

--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^11.11.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
