--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-confetti": "^6.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
