--- a/proxyServer/package.json
+++ b/proxyServer/package.json
@@ -4,19 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start":" node index.js",
+        "vercel-build":"echo building"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^5.20.0",
-        "aws-sdk": "^2.1691.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.1",
         "http-proxy": "^1.18.1",
-        "node-ipinfo": "^3.5.3",
-        "request-ip": "^3.3.0",
+        "serverless-http": "^3.2.0",
         "uuidv4": "^6.2.13"
     },
     "devDependencies": {
