--- a/api-server/package.json
+++ b/api-server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
-    
+    "build": "rimraf ./build && tsc ",
     "dev": "tsc-watch --onSuccess \"npm start\"",
     "start": "node build/index.js"
   },
@@ -14,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.540.0",
+    "@datastax/astra-db-ts": "^1.5.0",
     "@prisma/client": "^5.11.0",
     "@types/express": "^4.17.21",
     "@types/nodemailer": "^6.4.14",
@@ -43,6 +43,7 @@
     "@types/node": "^20.11.30",
     "@types/passport": "^1.0.16",
     "@types/passport-github2": "^1.2.9",
+    "copyfiles": "^2.4.1",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.2"
   }
