--- a/api-server/package.json
+++ b/api-server/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "node-ipinfo": "^3.5.3",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
     "@types/passport": "^1.0.16",
