--- a/api-server/package.json
+++ b/api-server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.540.0",
+    "@aws-sdk/client-s3": "^3.666.0",
     "@datastax/astra-db-ts": "^1.5.0",
     "@prisma/client": "^5.11.0",
     "@types/express": "^4.17.21",
