Added readme.md file and integrated Delete project api

--- a/api-server/.env.sample
+++ b/api-server/.env.sample
@@ -1,4 +1,4 @@
-PORT=8000
+PORT=
 AWS_SECRET_ACCESS_KEY=""
 AWS_ACCESS_KEY=""
 AWS_REGION=""
@@ -9,19 +9,15 @@ AWS_ECS_SUB2=""
 AWS_ECS_SUB3=""
 AWS_ECS_SG=""
 AWS_BUCKET_NAME=""
+AWS_SQS_URL=""
 REDIS_URI=""
-SOCKET_PORT=8001
-
 DATABASE_URL=""
 JWT_SECRET=""
-
-# EMAIL SETUP
-EMAIL_USERNAME=""
-EMAIL_PASSWORD=""
-
-#BASE_URL: Your client's url
 BASE_URL=""
 API_SERVER_URL=""
-
-CASSANDRA_USERNAME=""
-CASSANDRA_PASS=""
+ASTRA_DB_APPLICATION_TOKEN=""
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+IPINFO_ACCESS_TOKEN=""
+SESSION_SECRET=""
+GUEST_USER_ID=""
